--- a/conFusion/app/views/dishdetail.html
+++ b/conFusion/app/views/dishdetail.html
@@ -1,6 +1,7 @@
     <div class="container">
         <div class="row row-content" ng-controller="DishDetailController as dishDetailCtl">
             <div class="col-xs-12">
+               <button class="btn btn-xs btn-primary pull-right" type="button" ui-sref="app.menu">Back to Menu</button>
                 <ul class="media-list">
                     <li class="media">
                             <div class="media-left media-middle">
