--- a/conFusion/app/views/aboutus.html
+++ b/conFusion/app/views/aboutus.html
@@ -55,7 +55,18 @@
             <div class="col-xs-12 col-sm-9">
                 <h2>Corporate Leadership</h2>
                <ul class="media-list">
-					<h4>Implement the Corporate Leaders List here</h4>
+					<li class="media" ng-repeat="leader in leaders">
+                        <div class="media-left">
+					        <img class="media-object img-thumbnail" ng-src="{{leader.image}}">
+					    </div>
+					    <div class="media-body">
+                            <h2 class="media-heading">
+                                {{leader.name}}
+                                <small>{{leader.designation}}</small>
+					        </h2>
+					        <p>{{leader.description}}</p>
+					    </div>
+					</li>
                </ul>
 
             </div>
