--- a/conFusion/app/views/home.html
+++ b/conFusion/app/views/home.html
@@ -6,7 +6,17 @@
                 <h3 align=center>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<h4>Implement the Featured Dish Here</h4>
+				<div class="media">
+                    <div class="media-left media-middle">
+                        <a href="#">
+                            <img class="media-object img-thumbnail" ng-src="{{featuredDish.image}}" alt="{{featuredDish.name}}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h2 class="media-heading">{{featuredDish.name}} <span class="label label-danger">{{featuredDish.label}}</span> <span class="badge">{{featuredDish.price}}</span></h2>
+                        <p>{{featuredDish.description}}</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -17,7 +27,17 @@
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
-				<h4>Implement the Promotion Here</h4>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="media-heading">{{promotion.name}} <span class="label label-danger">{{promotion.label}}</span> <span class="badge">{{promotion.price}}</span></h2>
+                        <p>{{promotion.description}}</p>
+                    </div>
+                    <div class="media-right media-middle">
+                        <a href="#">
+                            <img ng-src="{{promotion.image}}" class="media-object img-thumbnail" alt="{{promotion.name}}">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -27,7 +47,18 @@
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<h4>Implement the Executive Chef Info Here</h4>
+				<div class="media">
+                    <div class="media-left media-middle">
+                        <a href="#">
+                            <img class="media-object img-thumbnail" ng-src="{{specialist.image}}" alt="{{specialist.name}}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h2 class="media-heading">{{specialist.name}}
+                        <small>{{specialist.designation}}</small></h2>
+                        <p>{{specialist.description}}</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
