--- a/conFusion/app/views/home.html
+++ b/conFusion/app/views/home.html
@@ -13,7 +13,7 @@
                         </a>
                     </div>
                     <div class="media-body">
-                        <h2 class="media-heading">{{featuredDish.name}} <span class="label label-danger">{{featuredDish.label}}</span> <span class="badge">{{featuredDish.price}}</span></h2>
+                        <h2 class="media-heading">{{featuredDish.name}} <span class="label label-danger">{{featuredDish.label}}</span> <span class="badge">{{featuredDish.price | currency}}</span></h2>
                         <p>{{featuredDish.description}}</p>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
             <div class="col-xs-12 col-sm-9">
                 <div class="media">
                     <div class="media-body">
-                        <h2 class="media-heading">{{promotion.name}} <span class="label label-danger">{{promotion.label}}</span> <span class="badge">{{promotion.price}}</span></h2>
+                        <h2 class="media-heading">{{promotion.name}} <span class="label label-danger">{{promotion.label}}</span> <span class="badge">{{promotion.price | currency}}</span></h2>
                         <p>{{promotion.description}}</p>
                     </div>
                     <div class="media-right media-middle">
