--- a/conFusion/app/views/home.html
+++ b/conFusion/app/views/home.html
@@ -53,7 +53,10 @@
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<div class="media">
+                <div ng-if="!showSpecialist">
+                    <h3>{{specialistMessage}}</h3>
+                </div>
+				<div class="media" ng-if="showSpecialist">
                     <div class="media-left media-middle">
                         <a href="#">
                             <img class="media-object img-thumbnail" ng-src="{{specialist.image}}" alt="{{specialist.name}}">
